// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Hiscores getHiscores should default type to HiscoreTypes.normal 1`] = `
Object {
  "method": "GET",
  "params": Object {
    "player": "Bald",
  },
  "url": "http://services.runescape.com/m=hiscore_oldschool/index_lite.ws",
}
`;

exports[`Hiscores getHiscores should hit the specified hiscore type endpoint 1`] = `
Object {
  "method": "GET",
  "params": Object {
    "player": "Bald",
  },
  "url": "http://services.runescape.com/m=hiscore_oldschool_seasonal/index_lite.ws",
}
`;

exports[`Hiscores getHiscores should make a GET request 1`] = `
Object {
  "method": "GET",
  "params": Object {
    "player": "Bald",
  },
  "url": "http://services.runescape.com/m=hiscore_oldschool/index_lite.ws",
}
`;

exports[`Hiscores getHiscores should make a request with the passed in player name 1`] = `
Object {
  "method": "GET",
  "params": Object {
    "player": "Bald",
  },
  "url": "http://services.runescape.com/m=hiscore_oldschool/index_lite.ws",
}
`;

exports[`Hiscores getHiscores should properly parse rank and kills for each boss 1`] = `
Object {
  "abyssalSire": Object {
    "kills": "-1",
    "rank": "-1",
  },
  "alchemicalHydra": Object {
    "kills": "95",
    "rank": "153371",
  },
  "artio": Object {
    "kills": "378",
    "rank": "59731",
  },
  "barrowsChests": Object {
    "kills": "-1",
    "rank": "-1",
  },
  "bryophyta": Object {
    "kills": "-1",
    "rank": "-1",
  },
  "callisto": Object {
    "kills": "394",
    "rank": "110649",
  },
  "calvarion": Object {
    "kills": "-1",
    "rank": "-1",
  },
  "cerberus": Object {
    "kills": "-1",
    "rank": "-1",
  },
  "chambersOfXeric": Object {
    "kills": "-1",
    "rank": "-1",
  },
  "chambersOfXericChallengeMode": Object {
    "kills": "523",
    "rank": "94256",
  },
  "chaosElemental": Object {
    "kills": "-1",
    "rank": "-1",
  },
  "chaosFanatic": Object {
    "kills": "-1",
    "rank": "-1",
  },
  "commanderZilyana": Object {
    "kills": "6",
    "rank": "160290",
  },
  "corporealBeast": Object {
    "kills": "7",
    "rank": "191412",
  },
  "corruptedGauntlet": Object {
    "kills": "-1",
    "rank": "-1",
  },
  "crazyArchaeologist": Object {
    "kills": "55",
    "rank": "131458",
  },
  "dagannothPrime": Object {
    "kills": "93",
    "rank": "69364",
  },
  "dagannothRex": Object {
    "kills": "-1",
    "rank": "-1",
  },
  "dagannothSupreme": Object {
    "kills": "164",
    "rank": "129476",
  },
  "derangedArchaeologist": Object {
    "kills": "160",
    "rank": "197639",
  },
  "gauntlet": Object {
    "kills": "-1",
    "rank": "-1",
  },
  "generalGraardor": Object {
    "kills": "162",
    "rank": "131149",
  },
  "giantMole": Object {
    "kills": "-1",
    "rank": "-1",
  },
  "grotesqueGuardians": Object {
    "kills": "13",
    "rank": "320681",
  },
  "hespori": Object {
    "kills": "651",
    "rank": "43129",
  },
  "kalphiteQueen": Object {
    "kills": "-1",
    "rank": "-1",
  },
  "kingBlackDragon": Object {
    "kills": "20",
    "rank": "315446",
  },
  "kraken": Object {
    "kills": "32",
    "rank": "154287",
  },
  "kreearra": Object {
    "kills": "180",
    "rank": "164470",
  },
  "krilTsutsaroth": Object {
    "kills": "33",
    "rank": "386137",
  },
  "mimic": Object {
    "kills": "-1",
    "rank": "-1",
  },
  "nex": Object {
    "kills": "61",
    "rank": "119639",
  },
  "nightmare": Object {
    "kills": "1",
    "rank": "98329",
  },
  "obor": Object {
    "kills": "11",
    "rank": "68866",
  },
  "phantomMuspah": Object {
    "kills": "-1",
    "rank": "-1",
  },
  "phosanisNightmare": Object {
    "kills": "-1",
    "rank": "-1",
  },
  "sarachnis": Object {
    "kills": "-1",
    "rank": "-1",
  },
  "scorpia": Object {
    "kills": "-1",
    "rank": "-1",
  },
  "skotizo": Object {
    "kills": "-1",
    "rank": "-1",
  },
  "spindel": Object {
    "kills": "-1",
    "rank": "-1",
  },
  "tempoross": Object {
    "kills": "9",
    "rank": "340565",
  },
  "theatreOfBlood": Object {
    "kills": "-1",
    "rank": "-1",
  },
  "theatreOfBloodHardMode": Object {
    "kills": "-1",
    "rank": "-1",
  },
  "thermonuclearSmokeDevil": Object {
    "kills": "-1",
    "rank": "-1",
  },
  "tombsOfAmascut": Object {
    "kills": "-1",
    "rank": "-1",
  },
  "tombsOfAmascutExpertMode": Object {
    "kills": "62",
    "rank": "185038",
  },
  "tzKalZuk": Object {
    "kills": "-1",
    "rank": "-1",
  },
  "tzTokJad": Object {
    "kills": "-1",
    "rank": "-1",
  },
  "venenatis": Object {
    "kills": "-1",
    "rank": "-1",
  },
  "vetion": Object {
    "kills": "6",
    "rank": "132805",
  },
  "vorkath": Object {
    "kills": "191",
    "rank": "40139",
  },
  "wintertodt": Object {
    "kills": "-1",
    "rank": "-1",
  },
  "zalcano": Object {
    "kills": "134",
    "rank": "289420",
  },
  "zulrah": Object {
    "kills": "404",
    "rank": "236447",
  },
}
`;

exports[`Hiscores getHiscores should properly parse rank and score for each minigame 1`] = `
Object {
  "bountyHunter": Object {
    "rank": "-1",
    "score": "-1",
  },
  "bountyHunterRogues": Object {
    "rank": "-1",
    "score": "-1",
  },
  "clueScrollsAll": Object {
    "rank": "166621",
    "score": "6",
  },
  "clueScrollsBeginner": Object {
    "rank": "112087",
    "score": "6",
  },
  "clueScrollsEasy": Object {
    "rank": "39763",
    "score": "769",
  },
  "clueScrollsElite": Object {
    "rank": "196652",
    "score": "56",
  },
  "clueScrollsHard": Object {
    "rank": "72321",
    "score": "65",
  },
  "clueScrollsMaster": Object {
    "rank": "11160",
    "score": "452",
  },
  "clueScrollsMedium": Object {
    "rank": "110824",
    "score": "27",
  },
  "leaguePoints": Object {
    "rank": "-1",
    "score": "-1",
  },
  "lms": Object {
    "rank": "15368",
    "score": "118",
  },
  "pvpArena": Object {
    "rank": "34024",
    "score": "51",
  },
  "riftsClosed": Object {
    "rank": "-1",
    "score": "-1",
  },
  "soulWarsZeal": Object {
    "rank": "72844",
    "score": "713",
  },
}
`;

exports[`Hiscores getHiscores should properly parse rank, level, and xp for each skill 1`] = `
Object {
  "agility": Object {
    "level": "86",
    "rank": "149279",
    "xp": "3666341",
  },
  "attack": Object {
    "level": "99",
    "rank": "64730",
    "xp": "20545561",
  },
  "construction": Object {
    "level": "94",
    "rank": "80737",
    "xp": "8168839",
  },
  "cooking": Object {
    "level": "99",
    "rank": "58810",
    "xp": "14826963",
  },
  "crafting": Object {
    "level": "99",
    "rank": "73502",
    "xp": "13298684",
  },
  "defence": Object {
    "level": "99",
    "rank": "41141",
    "xp": "19722694",
  },
  "farming": Object {
    "level": "99",
    "rank": "166844",
    "xp": "13166060",
  },
  "firemaking": Object {
    "level": "99",
    "rank": "53114",
    "xp": "14100677",
  },
  "fishing": Object {
    "level": "99",
    "rank": "106234",
    "xp": "13034820",
  },
  "fletching": Object {
    "level": "99",
    "rank": "45207",
    "xp": "13483788",
  },
  "herblore": Object {
    "level": "99",
    "rank": "37705",
    "xp": "13193941",
  },
  "hitpoints": Object {
    "level": "99",
    "rank": "122197",
    "xp": "28805913",
  },
  "hunter": Object {
    "level": "83",
    "rank": "231210",
    "xp": "2861287",
  },
  "magic": Object {
    "level": "99",
    "rank": "68128",
    "xp": "19878940",
  },
  "mining": Object {
    "level": "87",
    "rank": "189013",
    "xp": "4132348",
  },
  "overall": Object {
    "level": "2200",
    "rank": "67661",
    "xp": "303540281",
  },
  "prayer": Object {
    "level": "99",
    "rank": "33714",
    "xp": "13165748",
  },
  "ranged": Object {
    "level": "99",
    "rank": "177458",
    "xp": "20358697",
  },
  "runecrafting": Object {
    "level": "86",
    "rank": "152593",
    "xp": "3601602",
  },
  "slayer": Object {
    "level": "99",
    "rank": "83237",
    "xp": "13923259",
  },
  "smithing": Object {
    "level": "89",
    "rank": "142873",
    "xp": "5179738",
  },
  "strength": Object {
    "level": "99",
    "rank": "70139",
    "xp": "24974617",
  },
  "thieving": Object {
    "level": "91",
    "rank": "156270",
    "xp": "6414961",
  },
  "woodcutting": Object {
    "level": "99",
    "rank": "130463",
    "xp": "13034803",
  },
}
`;

exports[`Hiscores getHiscores should return skills, minigames, and bosses from a csv 1`] = `
Object {
  "bosses": Object {
    "abyssalSire": Object {
      "kills": "-1",
      "rank": "-1",
    },
    "alchemicalHydra": Object {
      "kills": "95",
      "rank": "153371",
    },
    "artio": Object {
      "kills": "378",
      "rank": "59731",
    },
    "barrowsChests": Object {
      "kills": "-1",
      "rank": "-1",
    },
    "bryophyta": Object {
      "kills": "-1",
      "rank": "-1",
    },
    "callisto": Object {
      "kills": "394",
      "rank": "110649",
    },
    "calvarion": Object {
      "kills": "-1",
      "rank": "-1",
    },
    "cerberus": Object {
      "kills": "-1",
      "rank": "-1",
    },
    "chambersOfXeric": Object {
      "kills": "-1",
      "rank": "-1",
    },
    "chambersOfXericChallengeMode": Object {
      "kills": "523",
      "rank": "94256",
    },
    "chaosElemental": Object {
      "kills": "-1",
      "rank": "-1",
    },
    "chaosFanatic": Object {
      "kills": "-1",
      "rank": "-1",
    },
    "commanderZilyana": Object {
      "kills": "6",
      "rank": "160290",
    },
    "corporealBeast": Object {
      "kills": "7",
      "rank": "191412",
    },
    "corruptedGauntlet": Object {
      "kills": "-1",
      "rank": "-1",
    },
    "crazyArchaeologist": Object {
      "kills": "55",
      "rank": "131458",
    },
    "dagannothPrime": Object {
      "kills": "93",
      "rank": "69364",
    },
    "dagannothRex": Object {
      "kills": "-1",
      "rank": "-1",
    },
    "dagannothSupreme": Object {
      "kills": "164",
      "rank": "129476",
    },
    "derangedArchaeologist": Object {
      "kills": "160",
      "rank": "197639",
    },
    "gauntlet": Object {
      "kills": "-1",
      "rank": "-1",
    },
    "generalGraardor": Object {
      "kills": "162",
      "rank": "131149",
    },
    "giantMole": Object {
      "kills": "-1",
      "rank": "-1",
    },
    "grotesqueGuardians": Object {
      "kills": "13",
      "rank": "320681",
    },
    "hespori": Object {
      "kills": "651",
      "rank": "43129",
    },
    "kalphiteQueen": Object {
      "kills": "-1",
      "rank": "-1",
    },
    "kingBlackDragon": Object {
      "kills": "20",
      "rank": "315446",
    },
    "kraken": Object {
      "kills": "32",
      "rank": "154287",
    },
    "kreearra": Object {
      "kills": "180",
      "rank": "164470",
    },
    "krilTsutsaroth": Object {
      "kills": "33",
      "rank": "386137",
    },
    "mimic": Object {
      "kills": "-1",
      "rank": "-1",
    },
    "nex": Object {
      "kills": "61",
      "rank": "119639",
    },
    "nightmare": Object {
      "kills": "1",
      "rank": "98329",
    },
    "obor": Object {
      "kills": "11",
      "rank": "68866",
    },
    "phantomMuspah": Object {
      "kills": "-1",
      "rank": "-1",
    },
    "phosanisNightmare": Object {
      "kills": "-1",
      "rank": "-1",
    },
    "sarachnis": Object {
      "kills": "-1",
      "rank": "-1",
    },
    "scorpia": Object {
      "kills": "-1",
      "rank": "-1",
    },
    "skotizo": Object {
      "kills": "-1",
      "rank": "-1",
    },
    "spindel": Object {
      "kills": "-1",
      "rank": "-1",
    },
    "tempoross": Object {
      "kills": "9",
      "rank": "340565",
    },
    "theatreOfBlood": Object {
      "kills": "-1",
      "rank": "-1",
    },
    "theatreOfBloodHardMode": Object {
      "kills": "-1",
      "rank": "-1",
    },
    "thermonuclearSmokeDevil": Object {
      "kills": "-1",
      "rank": "-1",
    },
    "tombsOfAmascut": Object {
      "kills": "-1",
      "rank": "-1",
    },
    "tombsOfAmascutExpertMode": Object {
      "kills": "62",
      "rank": "185038",
    },
    "tzKalZuk": Object {
      "kills": "-1",
      "rank": "-1",
    },
    "tzTokJad": Object {
      "kills": "-1",
      "rank": "-1",
    },
    "venenatis": Object {
      "kills": "-1",
      "rank": "-1",
    },
    "vetion": Object {
      "kills": "6",
      "rank": "132805",
    },
    "vorkath": Object {
      "kills": "191",
      "rank": "40139",
    },
    "wintertodt": Object {
      "kills": "-1",
      "rank": "-1",
    },
    "zalcano": Object {
      "kills": "134",
      "rank": "289420",
    },
    "zulrah": Object {
      "kills": "404",
      "rank": "236447",
    },
  },
  "minigames": Object {
    "bountyHunter": Object {
      "rank": "-1",
      "score": "-1",
    },
    "bountyHunterRogues": Object {
      "rank": "-1",
      "score": "-1",
    },
    "clueScrollsAll": Object {
      "rank": "166621",
      "score": "6",
    },
    "clueScrollsBeginner": Object {
      "rank": "112087",
      "score": "6",
    },
    "clueScrollsEasy": Object {
      "rank": "39763",
      "score": "769",
    },
    "clueScrollsElite": Object {
      "rank": "196652",
      "score": "56",
    },
    "clueScrollsHard": Object {
      "rank": "72321",
      "score": "65",
    },
    "clueScrollsMaster": Object {
      "rank": "11160",
      "score": "452",
    },
    "clueScrollsMedium": Object {
      "rank": "110824",
      "score": "27",
    },
    "leaguePoints": Object {
      "rank": "-1",
      "score": "-1",
    },
    "lms": Object {
      "rank": "15368",
      "score": "118",
    },
    "pvpArena": Object {
      "rank": "34024",
      "score": "51",
    },
    "riftsClosed": Object {
      "rank": "-1",
      "score": "-1",
    },
    "soulWarsZeal": Object {
      "rank": "72844",
      "score": "713",
    },
  },
  "skills": Object {
    "agility": Object {
      "level": "86",
      "rank": "149279",
      "xp": "3666341",
    },
    "attack": Object {
      "level": "99",
      "rank": "64730",
      "xp": "20545561",
    },
    "construction": Object {
      "level": "94",
      "rank": "80737",
      "xp": "8168839",
    },
    "cooking": Object {
      "level": "99",
      "rank": "58810",
      "xp": "14826963",
    },
    "crafting": Object {
      "level": "99",
      "rank": "73502",
      "xp": "13298684",
    },
    "defence": Object {
      "level": "99",
      "rank": "41141",
      "xp": "19722694",
    },
    "farming": Object {
      "level": "99",
      "rank": "166844",
      "xp": "13166060",
    },
    "firemaking": Object {
      "level": "99",
      "rank": "53114",
      "xp": "14100677",
    },
    "fishing": Object {
      "level": "99",
      "rank": "106234",
      "xp": "13034820",
    },
    "fletching": Object {
      "level": "99",
      "rank": "45207",
      "xp": "13483788",
    },
    "herblore": Object {
      "level": "99",
      "rank": "37705",
      "xp": "13193941",
    },
    "hitpoints": Object {
      "level": "99",
      "rank": "122197",
      "xp": "28805913",
    },
    "hunter": Object {
      "level": "83",
      "rank": "231210",
      "xp": "2861287",
    },
    "magic": Object {
      "level": "99",
      "rank": "68128",
      "xp": "19878940",
    },
    "mining": Object {
      "level": "87",
      "rank": "189013",
      "xp": "4132348",
    },
    "overall": Object {
      "level": "2200",
      "rank": "67661",
      "xp": "303540281",
    },
    "prayer": Object {
      "level": "99",
      "rank": "33714",
      "xp": "13165748",
    },
    "ranged": Object {
      "level": "99",
      "rank": "177458",
      "xp": "20358697",
    },
    "runecrafting": Object {
      "level": "86",
      "rank": "152593",
      "xp": "3601602",
    },
    "slayer": Object {
      "level": "99",
      "rank": "83237",
      "xp": "13923259",
    },
    "smithing": Object {
      "level": "89",
      "rank": "142873",
      "xp": "5179738",
    },
    "strength": Object {
      "level": "99",
      "rank": "70139",
      "xp": "24974617",
    },
    "thieving": Object {
      "level": "91",
      "rank": "156270",
      "xp": "6414961",
    },
    "woodcutting": Object {
      "level": "99",
      "rank": "130463",
      "xp": "13034803",
    },
  },
}
`;
